test/files/pos/t715/runner_2.scala
object Test extends App {
  println(com.sap.dspace.model.othello.thePOJO2XMLRenderer)
}
