test/files/neg/macro-noexpand/Test_2.scala
object Test extends App {
  import Macros._
  foo(x)
}